# AOP_DP

./: LICENSE  README.md  edges.csv  products.csv  pyproject.toml  requirements.txt
aopdp/: cli.py  dp.py  exposure.py  graph.py  weights.py
configs/: example.yml
data/: events.csv
data /: chem_map.csv
